<resources>
    <string name="app_name">Match Points</string>
    <string name="_100">100</string>
    <string name="foul_1">Foul -1</string>
    <string name="team_b">Team B</string>
    <string name="_0">0</string>
    <string name="_2_points">+ 2 Points</string>
    <string name="_3_points">+ 3 Points</string>
    <string name="_3_points">+ 3 Points</string>
    <string name="_2_points">+ 2 Points</string>
    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="_1_points">+ 1 Points</string>
    <string name="_1_points">+ 1 Points</string>
    <string name="foul_1">Foul -1</string>
    <string name="reset">reset</string>
</resources>